2006-05-19  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/pygtk-glade-gui//Creating_a_GUI_using_PyGTK_and_Glade.htm
	* articles/pygtk-glade-gui/resources/directory01.png
	* articles/pygtk-glade-gui/resources/glade_04.png
	* articles/pygtk-glade-gui/resources/gtkhelloworld.png
	* articles/pygtk-glade-gui/resources/small_glade_01.png
	* articles/pygtk-glade-gui/resources/small_glade_02.png
	* articles/pygtk-glade-gui/resources/small_glade_03.png
	* articles/pygtk-glade-gui/resources/somerights20.png
	* articles/pygtk-glade-gui/resources/style.css: new article by
	Mark Mruss

2006-05-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* documentation/pygnomeprint.tar.bz2:
	* documentation/pygnomeprintui.tar.bz2:
	* documentation/pygnomevfs.tar.bz2:
	* documentation/pygtkmozembed.tar.bz2:
	* documentation/pygtksourceview.tar.bz2:
	* documentation/pygtkspell.tar.bz2: New documentation tarballs,
	now with encoding changed to utf-8.

2006-05-05  Christian Reis  <kiko@async.com.br>

	* foot.src, newsitems.py, tutorial.src,
	  articles/applets_arturogf/applets_arturogf.xml,
	  articles/applets_arturogf/b308.html,
	  articles/applets_arturogf/index.html,
	  articles/bitpodder/BitPodder.htm,
	  articles/cairo-pygtk-widgets/cairo-pygtk-widgets.htm,
	  articles/cairo-pygtk-widgets/clock_ex1.py: convert to utf-8
	* .htaccess: set utf-8 as our default encoding; finally undo the mess
	I made by assuming iso-8859-1 when in fact we had
	content with mixed encodings in our tree.

2006-05-05  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): Add Kiwi 1.8.9 and Gazpacho 0.6.6.

2006-04-18  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Update Pida information

2006-04-12  Johan Dahlin  <jdahlin@async.com.br>

	* newsitems.py (item): PyGTK 2.8.6

2006-04-07  Johan Dahlin  <jdahlin@async.com.br>

	* head.src: 
	* foot.src: Update, remove bonsai, lxr and software map,
	defunct. Make the link more relevant to pygtk.
