@@ -16,6 +16,13 @@
 
   <tbody>
      <tr>
+      <td>May 2006</td>
+      <td><a href="http://www.learningpython.com/2006/05/07/creating-a-gui-using-pygtk-and-glade/">Creating a GUI using PyGTK and Glade</a><br>
+          <a href="./articles/pygtk-glade-gui/Creating_a_GUI_using_PyGTK_and_Glade.htm">Local copy</a>
+      <td>Mark Mruss</td>
+    </tr>
+
+     <tr>
       <td>Feb 2006</td>
       <td><a href="./articles/cairo-pygtk-widgets/cairo-pygtk-widgets2.htm">Writing a Widget Using Cairo and PyGTK 2.8, Part 2</a><br>
           <a href="http://www.oluyede.org/blog/writing-a-widget-using-cairo-and-pygtk-28-part-2/">Original source</a></td>
