@@ -14,6 +14,14 @@ item = lambda *x: items.append(x)
 #      "INSERT AUTHOR HERE")
 
 # http://news.gmane.org/gmane.comp.gnome.gtk%2B.python/
+item("New article - Creating a GUI using PyGTK and Glade",
+     (2006, 05, 19), """<a
+     href="http://www.learningpython.com/2006/05/07/creating-a-gui-using-pygtk-and-glade/">
+     This article</a> by Mark Mruss explains how to start using glade
+     to build your PyGTK application interfaces. This is a perfect start for beginners
+     who want to enjoy the power of glade.
+     """, 'Rafael Villar Burke')
+
 item("Gazpacho 0.6.6 released",
      (2006, 5, 3),
      """
