@@ -1,6 +1,11 @@
 2006-05-19  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
-	* articles/pygtk-glade-gui//Creating_a_GUI_using_PyGTK_and_Glade.htm
+	* articles.src: Add new article pygtk-glade-gui
+	* newsitems.py: Add new article entry
+
+2006-05-19  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* articles/pygtk-glade-gui/Creating_a_GUI_using_PyGTK_and_Glade.htm
 	* articles/pygtk-glade-gui/resources/directory01.png
 	* articles/pygtk-glade-gui/resources/glade_04.png
 	* articles/pygtk-glade-gui/resources/gtkhelloworld.png
